...
            closeButtonPressed()
        }
    }
    var calsToday: some View {
        GroupBox {
            VStack {
                Text("Burned calories today.")
                    .withSubTitleTextFormmatting(font: .title3, foregroundColor: .primary)
                
                Text(caloriesVM.caloriesData?.latest ?? 0.0, format: .number.precision(.fractionLength(0)))
                    .withSubTitleTextFormmatting(font: .headline, foregroundColor: .secondary)
                
            }
...
