...
            closeButtonPressed()
        }
    }
    var climbedTodayView: some View {
        GroupBox {
            VStack {
                Text("Your climbed stairs for today.")
                    .withSubTitleTextFormmatting(font: .title3, foregroundColor: .primary)
                Text(climbedVM.climbedData?.latest ?? 0, format: .number)
                    .withSubTitleTextFormmatting(font: .headline, foregroundColor: .secondary)
            }
        }
    }
...
